--- a/algorithm/.vscode/settings.json
+++ b/algorithm/.vscode/settings.json
@@ -2,6 +2,9 @@
     "files.associations": {
         "*.m": "matlab",
         "vector": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "sstream": "cpp",
+        "functional": "cpp",
+        "iosfwd": "cpp"
     }
 }
